Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -1448,13 +1448,13 @@
         "\n"
       ],
       "metadata": {
-        "id": "7Fn2I_1jk_3Y",
-        "outputId": "8c82832e-502b-4271-ad16-790946edf983",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7Fn2I_1jk_3Y",
+        "outputId": "a95ee01a-337d-43a0-8983-d5906ce221db"
       },
-      "execution_count": 43,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,6 +1464,49 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from Electricar import ElectriCar\n",
+        "\n",
+        "electri_car = ElectriCar(\"Nissa\",\"leaf\",2023)\n",
+        "print(electri_car.get_descriptive_name())\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6YA77r17sJOa",
+        "outputId": "034e9267-eafd-4e41-d02e-550089d0bc8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nissa Leaf 2023\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-Hd00y7ZsM-i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "f80NLDgNsMu0"
+      }
     }
   ]
 }
