Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -1468,20 +1468,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# import car as cr\n",
         "from Electricar import ElectriCar\n",
         "\n",
         "electri_car = ElectriCar(\"Nissa\",\"leaf\",2023)\n",
         "print(electri_car.get_descriptive_name())\n",
+        "# normal_car = cr.Car(\"Nisann2\",\"sc2\",2014)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "6YA77r17sJOa",
-        "outputId": "034e9267-eafd-4e41-d02e-550089d0bc8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6YA77r17sJOa",
+        "outputId": "2f765f3c-d188-4f72-ca35-bdb94aa7a064"
       },
-      "execution_count": 53,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -1494,12 +1497,95 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from random import randint as rd\n",
+        "\n",
+        "\n",
+        "\n",
+        "number = rd(1,30)\n",
+        "print(number)"
+      ],
+      "metadata": {
+        "id": "8RYcHPDguuGE",
+        "outputId": "2fe86aec-cfca-430e-d8c6-5cf225eacfbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-13. Dice: Make a class Die with one attribute called sides, which has a\n",
+        "default value of 6. Write a method called roll_die() that prints a random number between 1 and the number of sides the die has. Make a 6-sided die and\n",
+        "roll it 10 times.\n",
+        "Make a 10-sided die and a 20-sided die. Roll each die 10 times."
+      ],
+      "metadata": {
+        "id": "7SdYBb3QvE2C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jcpEC8iTvEZV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-14. Lottery: Make a list or tuple containing a series of 10 numbers and 5 letters.\n",
+        "Randomly select 4 numbers or letters from the list and print a message saying that\n",
+        "any ticket matching these 4 numbers or letters wins a prize."
+      ],
+      "metadata": {
+        "id": "YXcxzsQAvF0P"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "-Hd00y7ZsM-i"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-15. Lottery Analysis: You can use a loop to see how hard it might be to win\n",
+        "the kind of lottery you just modeled. Make a list or tuple called my_ticket. Write\n",
+        "a loop that keeps pulling numbers until your ticket wins. Print a message reporting how many times the loop had to run to give you a winning ticket."
+      ],
+      "metadata": {
+        "id": "zwjCZIdQvIO0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-16. Python Module of the Week: One excellent resource for exploring the\n",
+        "Python standard library is a site called Python Module of the Week. Go to\n",
+        "https://pymotw.com and look at the table of contents. Find a module that looks\n",
+        "interesting to you and read about it, perhaps starting with the random module."
+      ],
+      "metadata": {
+        "id": "0_NF8ztsvJut"
+      }
     },
     {
       "cell_type": "markdown",
